--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ nav {
     background-color: var(--cor5);
     padding: 10px;
     box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.253);
+    border: 10px solid var(--cor5);
 }
 
 nav > a {
